# housing-prices-competition-for-kaggle-learn-users

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: __init__.py
src/data/: process_data.py
src/features/: advanced_features.py
