[tool.poetry]
name = "housing-prices-competition"
version = "0.1.0"
description = "Solução para a competição Housing Prices Competition for Kaggle Learn Users"
authors = ["Matheus Abrantes <abrantes_matheus@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
catboost = "^1.2.0"
optuna = "^3.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 